--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -67,24 +67,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game Selection.cs">
+    <Compile Include="Classes\MultiLang.cs" />
+    <Compile Include="Classes\MultiLangButton.cs" />
+    <Compile Include="Forms\Game Selection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Game Selection.Designer.cs">
+    <Compile Include="Forms\Game Selection.Designer.cs">
       <DependentUpon>Game Selection.cs</DependentUpon>
     </Compile>
-    <Compile Include="Language Selection.cs">
+    <Compile Include="Forms\Language Selection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Language Selection.Designer.cs">
+    <Compile Include="Forms\Language Selection.Designer.cs">
       <DependentUpon>Language Selection.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Game Selection.resx">
+    <EmbeddedResource Include="Forms\Game Selection.resx">
       <DependentUpon>Game Selection.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Language Selection.resx">
+    <EmbeddedResource Include="Forms\Language Selection.resx">
       <DependentUpon>Language Selection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -126,6 +128,19 @@
     <Content Include="Pictures\Icône.ico" />
     <Content Include="Pictures\Flags\France.png" />
     <Content Include="Pictures\Flags\US.png" />
+    <Content Include="Procedures\Manipulating language.txt" />
+    <Content Include="Procedures\ProcedureTemplate.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ProcedureTemplate.txt</LastGenOutput>
+    </Content>
+    <Content Include="Procedures\ProcedureTemplate.txt">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProcedureTemplate.tt</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
