Added lang files and modified the lang procedure on purpose

--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -84,6 +84,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ressources Files\Lang\Forms Components\Buttons.cs" />
+    <Compile Include="Ressources Files\Lang\Forms Components\Group Box.cs" />
     <EmbeddedResource Include="Forms\Game Selection - North America.resx">
       <DependentUpon>Game Selection - North America.cs</DependentUpon>
     </EmbeddedResource>
