--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -71,11 +71,11 @@
     <Compile Include="Classes\MultiLangGroupBox.cs" />
     <Compile Include="Classes\MultiLangButton.cs" />
     <Compile Include="Classes\MultiLangWeapon.cs" />
-    <Compile Include="Forms\Game Selection - North America.cs">
+    <Compile Include="Forms\Game Selection - International.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Game Selection - North America.Designer.cs">
-      <DependentUpon>Game Selection - North America.cs</DependentUpon>
+    <Compile Include="Forms\Game Selection - International.Designer.cs">
+      <DependentUpon>Game Selection - International.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Language Selection.cs">
       <SubType>Form</SubType>
@@ -87,8 +87,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ressources Files\Lang\Forms Components\Buttons.cs" />
     <Compile Include="Ressources Files\Lang\Forms Components\Group Box.cs" />
-    <EmbeddedResource Include="Forms\Game Selection - North America.resx">
-      <DependentUpon>Game Selection - North America.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Game Selection - International.resx">
+      <DependentUpon>Game Selection - International.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Language Selection.resx">
       <DependentUpon>Language Selection.cs</DependentUpon>
