--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ressources Files\Lang\Forms Components\Buttons.cs" />
     <Compile Include="Ressources Files\Lang\Forms Components\Group Box.cs" />
+    <Compile Include="Ressources Files\Lang\Game Elements\Weapons\Great Sword\MH3U.cs" />
     <EmbeddedResource Include="Forms\Game Selection - International.resx">
       <DependentUpon>Game Selection - International.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,8 +147,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Ressources Files\Lang\Game Elements\Weapons\Great Sword\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
