Lance Icon Added

--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -192,6 +192,16 @@
     <Content Include="Ressources\Pictures\Rarities\Hunting Horn\Hunting_Horn_Rarity_8.png" />
     <Content Include="Ressources\Pictures\Rarities\Hunting Horn\Hunting_Horn_Rarity_9.png" />
     <Content Include="Ressources\Pictures\Rarities\Hunting Horn\Hunting_Horn_Rarity_X.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_1.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_2.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_3.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_4.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_5.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_6.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_7.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_8.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_9.png" />
+    <Content Include="Ressources\Pictures\Rarities\Lance\Lance_Rarity_X.png" />
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_1.png" />
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_2.png" />
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_3.png" />
