--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -172,6 +172,16 @@
     <Content Include="Ressources\Pictures\Rarities\Great Sword\Great_Sword_Rarity_8.png" />
     <Content Include="Ressources\Pictures\Rarities\Great Sword\Great_Sword_Rarity_9.png" />
     <Content Include="Ressources\Pictures\Rarities\Great Sword\Great_Sword_Rarity_X.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_1.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_2.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_3.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_4.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_5.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_6.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_7.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_8.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_9.png" />
+    <Content Include="Ressources\Pictures\Rarities\Gunlance\Gunlance_Rarity_X.png" />
     <Content Include="Ressources\Pictures\Rarities\Hammer\Hammer_Rarity_1.png" />
     <Content Include="Ressources\Pictures\Rarities\Hammer\Hammer_Rarity_2.png" />
     <Content Include="Ressources\Pictures\Rarities\Hammer\Hammer_Rarity_3.png" />
