--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -222,6 +222,16 @@
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_8.png" />
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_9.png" />
     <Content Include="Ressources\Pictures\Rarities\Long Sword\Long_Sword_Rarity_X.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_1.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_2.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_3.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_4.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_5.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_6.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_7.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_8.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_9.png" />
+    <Content Include="Ressources\Pictures\Rarities\Switch Axe\Switch_Axe_Rarity_X.png" />
     <Content Include="Ressources\Pictures\Rarities\Sword and Shield\Sword_and_Shield_Rarity_1.png" />
     <Content Include="Ressources\Pictures\Rarities\Sword and Shield\Sword_and_Shield_Rarity_2.png" />
     <Content Include="Ressources\Pictures\Rarities\Sword and Shield\Sword_and_Shield_Rarity_3.png" />
