--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Ressources\MultiLangTexts\Forms Components\Buttons.cs" />
     <Compile Include="Ressources\MultiLangTexts\Forms Components\Group Box.cs" />
     <Compile Include="Ressources\MultiLangTexts\Game Elements\Weapons\Great Sword\MH3U.cs" />
+    <Compile Include="Ressources\Pictures\Rarities\Gen3-4\Weapons.cs" />
     <Compile Include="Ressources\Pictures\Rarities\Gen3-4\Weapons.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
