Started the Weapon class and the rarity class/icon selector

--- a/MH Database/MH Database/MH Database.csproj
+++ b/MH Database/MH Database/MH Database.csproj
@@ -67,6 +67,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Containers\Item.cs" />
+    <Compile Include="Classes\Containers\Weapon.cs" />
+    <Compile Include="Classes\Elements\Rarity.cs" />
     <Compile Include="Classes\MultiLang\MultiLang.cs" />
     <Compile Include="Classes\MultiLang\MultiLangGroupBox.cs" />
     <Compile Include="Classes\MultiLang\MultiLangButton.cs" />
@@ -507,6 +510,8 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Ressources\Weapons Data\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
