--- a/MH Database/MH Database/MH Database - Old Unfinished.csproj
+++ b/MH Database/MH Database/MH Database - Old Unfinished.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -72,7 +72,9 @@
     <Compile Include="Classes\Elements\Rarity.cs" />
     <Compile Include="Classes\MultiLang\MultiLang.cs" />
     <Compile Include="Classes\MultiLang\MultiLangGroupBox.cs" />
-    <Compile Include="Classes\MultiLang\MultiLangButton.cs" />
+    <Compile Include="Classes\MultiLang\MultiLangButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\MultiLang\MultiLangWeapon.cs" />
     <Compile Include="Forms\Game Selection - International.cs">
       <SubType>Form</SubType>
